; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_verbs.c___ibv_modify_srq.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_verbs.c___ibv_modify_srq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_srq = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { {}* }
%struct.ibv_srq_attr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__ibv_modify_srq(%struct.ibv_srq* %0, %struct.ibv_srq_attr* %1, i32 %2) #0 {
  %4 = alloca %struct.ibv_srq*, align 8
  %5 = alloca %struct.ibv_srq_attr*, align 8
  %6 = alloca i32, align 4
  store %struct.ibv_srq* %0, %struct.ibv_srq** %4, align 8
  store %struct.ibv_srq_attr* %1, %struct.ibv_srq_attr** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ibv_srq*, %struct.ibv_srq** %4, align 8
  %8 = getelementptr inbounds %struct.ibv_srq, %struct.ibv_srq* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = bitcast {}** %11 to i32 (%struct.ibv_srq*, %struct.ibv_srq_attr*, i32)**
  %13 = load i32 (%struct.ibv_srq*, %struct.ibv_srq_attr*, i32)*, i32 (%struct.ibv_srq*, %struct.ibv_srq_attr*, i32)** %12, align 8
  %14 = load %struct.ibv_srq*, %struct.ibv_srq** %4, align 8
  %15 = load %struct.ibv_srq_attr*, %struct.ibv_srq_attr** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 %13(%struct.ibv_srq* %14, %struct.ibv_srq_attr* %15, i32 %16)
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
